<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">To Do List</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_add">Add</string>
    <string name="action_delete_checked">Delete checked items</string>
    <string name="action_sort_by_priority">Sort by priority</string>
    <string name="action_sort_by_duedate">Sort by due date</string>
    <string name="action_sort_by_original">Reset sorting</string>
    <string name="add_hint">Item name</string>
    <string name="add_button_label">Add new item</string>
    <string name="title_activity_edit_item">EditItemActivity</string>
    <string name="textView_editItem">Edit Item Below</string>
    <string name="btn_save">Save item</string>
    <string name="ic_high_desc">High priority</string>
    <string name="tv_item_desc">Item displays here</string>
    <string name="item_dateText">date</string>
    <string name="title_activity_add_item">AddItemActivity</string>
    <string name="priority_high">High priority</string>
    <string name="priority_medium">Medium priority</string>
    <string name="priority_low">Low priority</string>
    <string name="btn_save_new">Save new item</string>

</resources>
