<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.todoapp.TodoActivity" >

    <item
        android:id="@+id/action_delete_checked"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_delete_checked"/>
    <item
        android:id="@+id/action_sort_by_priority"
        android:orderInCategory="200"
        android:showAsAction="never"
        android:title="@string/action_sort_by_priority"/>
    <item
        android:id="@+id/action_sort_by_duedate"
        android:orderInCategory="300"
        android:showAsAction="never"
        android:title="@string/action_sort_by_duedate"/>
    <item
        android:id="@+id/action_sort_by_original"
        android:orderInCategory="400"
        android:showAsAction="never"
        android:title="@string/action_sort_by_original"/>
    <item
        android:id="@+id/itemAdd"
        android:icon="@drawable/ic_action_add"
        android:onClick="onAddItem"
        android:showAsAction="ifRoom"
        android:title="@string/action_add">
    </item>

</menu>