<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:descendantFocusability="blocksDescendants"
    android:layout_height="match_parent" >

    <ImageView
        android:id="@+id/item_icon"
        android:layout_width="40dip"
        android:layout_height="40dip"
        android:scaleType="fitXY" 
        android:layout_centerVertical="true"
        android:adjustViewBounds="true"
        android:contentDescription="@string/ic_high_desc"/>

    <TextView
        android:id="@+id/item_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/item_icon"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="30dp"
        android:ellipsize="end"
        android:gravity="center_vertical"
        android:singleLine="true"
        android:text="@string/tv_item_desc"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/item_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/item_desc"
        android:layout_below="@+id/item_desc"
        android:text="@string/item_dateText"
        android:textSize="14sp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#999999" />

    <CheckBox
        android:id="@+id/taskDone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|right"
        android:onClick="markItemCompleted"
        android:layout_alignParentRight="true"/>

</RelativeLayout>